# Treedepth-Pace-2020

./: LICENSE  README.md
solver/: BaseTypes.h  CMakeLists.txt  ChainSolver.h  EntryPoint.cpp  EntryPoint.h  GraphIO.cpp  GraphIO.h  GraphUtil.cpp  GraphUtil.h  ParallelSolver.h  PrioritizedStrategicSolver.cpp  PrioritizedStrategicSolver.h  StrategicSolver.cpp  StrategicSolver.h  Tree.h  betweenness_centrality.hpp  zip_files.bat  zip_files.sh
